涂鸦么有图片的完成

--- a/app.json
+++ b/app.json
@@ -1,13 +1,25 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/logs/logs"
+    "pages/photo/photo",
+    "pages/draw/draw"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/photo/photo",
+        "text": "拍照"
+      },
+      {
+        "pagePath": "pages/draw/draw",
+        "text": "涂鸦"
+      }
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
